--- a/home.html
+++ b/home.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>HI, How are You?</p>
+    <h1>What is your name?</h1>
+    <h1>My company give good price</h1>
 </body>
 </html>
